# JaxGCRL-marl

./: .dockerignore  .gitignore  BENCHMARKS.md  CHANGES.md  Dockerfile  HANDOFF.md  Makefile  NEXT_SESSION_HANDOFF.md  PURE_CPPO_CLEANUP_PROMPT.md  README.md  ant_reproduction.md  benchmark_results.json  envs  goal_routing_report.md  jaxgcrl_compat_fixes.patch  manifest.yaml  patched-manifest.yaml  pyproject.toml  run.sh  run_brax_benchmark.sh  run_paper.sh
80M_runs/: cppo_decoupled.win_rate_trajectory.txt  cppo_decoupled_gae_smooth_adv.win_rate_trajectory.txt  cppo_smooth_adv_in_progress.win_rate_trajectory.txt  cppo_sub25.win_rate_trajectory.txt
jaxgcrl/agents/: __init__.py
jaxgcrl/envs/: wrappers.py
jaxgcrl/utils/: config.py  env.py  evaluator.py
mava/: evaluator.py  run copy.sh  run.sh  run_jaxnav_benchmark copy.sh  run_jaxnav_benchmark.sh  run_top10_rerun copy.sh  run_top10_rerun.sh  types.py
results/: maze_150m_winrates.txt  maze_300m_winrates.txt  sokoban_150m_winrates.txt
scripts/: README.md  benchmark_systems.py  fix_execstack.py  launch.sh  run_ant.sh  run_ant_paper.sh  run_ant_promising.sh  run_ant_push40.sh  run_benchmark_sps.sh  run_cppo.sh  run_cppo_ant.sh  run_cppo_ant_big_maze.sh  run_cppo_ant_maze.sh  run_cppo_ant_u_maze.sh  run_cppo_baseline.sh  run_cppo_decoupled.sh  run_cppo_decoupled_gae.sh  run_cppo_humanoid.sh  run_cppo_ippo_actor.sh  run_cppo_pusher_hard.sh  run_cppo_reacher.sh  run_cppo_sub25_RETUNE_NEEDED.sh  run_cppo_sub50_RETUNE_NEEDED.sh  run_crl.sh  run_icrl.sh  run_ippo_4layer.sh  run_reacher.sh  summarize_run.py  sweep_cppo.yml
(+131 files in other folders)
